Added extra header for displaying all students

--- a/lab4c.html
+++ b/lab4c.html
@@ -37,9 +37,12 @@
         <h2>Search Student</h2>
         <label>Search Student Number:</label><br>
         <input type="text" id="searchID" placeholder="Enter Student Number"><br>
-        <button id="searchBtn" onclick="find_student()">Search</button>
+        <button id="searchBtn">Search</button>
         <p id="displayStudent"></p>
         
+        <h2>All Students</h2>
+        <button id="displayAllBtn">Display All</button>
+        <ul id="studentList"></ul>
 
         <script src="lab4c_scripts.js"></script>
     </body>
