added Display all students function

--- a/lab4c.html
+++ b/lab4c.html
@@ -40,7 +40,7 @@
         <button id="searchBtn">Search</button>
         <p id="displayStudent"></p>
         
-        <h2>All Students</h2>
+        <h2>Display All Students</h2>
         <button id="displayAllBtn">Display All</button>
         <ul id="studentList"></ul>
 
