fixed html file

--- a/lab4c.html
+++ b/lab4c.html
@@ -43,6 +43,7 @@
         <h2>Display All Students</h2>
         <button id="displayAllBtn">Display All</button>
         <ul id="studentList"></ul>
+        <p id="displayAllStudents"></p>
 
         <script src="lab4c_scripts.js"></script>
     </body>
