Added required attribute

--- a/lab4c.html
+++ b/lab4c.html
@@ -13,13 +13,13 @@
             <input type="hidden" id="studentNumber">
 
             <label>Name:</label><br>
-            <input type="text" id="name"><br><br>
+            <input type="text" id="name" required><br><br>
 
             <label>Age:</labeL><br>
-            <input type="number" id="age"><br><br>
+            <input type="number" id="age" required><br><br>
 
             <label>UP Mail:</label><br>
-            <input type="email" id="email"><br><br>
+            <input type="email" id="email" required><br><br>
             
             <label>Course:</label><br>
             <select id="course">
@@ -30,7 +30,7 @@
                 <option value="BS Biology">BS Biology</option>
             </select><br><br><br>
 
-            <button type="button" id="submitBtn">Submit</button>
+            <button type="submit" id="submitBtn">Submit</button>
         </form>
 
        
