--- a/lab4c.html
+++ b/lab4c.html
@@ -13,13 +13,16 @@
             <input type="hidden" id="studentNumber">
 
             <label>Name:</label><br>
-            <input type="text" id="name" required><br><br>
+            <input type="text" id="name" required>
+            <p id="errorName"></p>
 
             <label>Age:</labeL><br>
-            <input type="number" id="age" required><br><br>
+            <input type="number" id="age" required>
+            <p id="errorNumber"></p>
 
             <label>UP Mail:</label><br>
-            <input type="email" id="email" required><br><br>
+            <input type="email" id="email" required>
+            <p id="errorEmail"></p>
             
             <label>Course:</label><br>
             <select id="course">
